# remote_python

./: Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  server.py  tests.py
.github/workflows/: cd-build-image.yml  ci-tests-and-checks.yml
