[project]
name = "remote-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "uvicorn>=0.34.3",
]
